feat: Add ResourceType enum and improve worker strategy logic